syntax = "proto3"; // Указываем версию синтаксиса

package account; // Пакет для организации сообщений

import "google/protobuf/timestamp.proto"; // Импортируем тип для времени

option go_package = "second_project/gen/go/account";

message Account {
  string username = 1;
  string password = 2;
  float balance = 3;
  google.protobuf.Timestamp date_of_registration = 4;
}

message CreateAccountRequest {
  string username = 1;
  string password = 2;

}

message CreateAccountResponse {
  Account account = 1;
}

message GetAccountRequest {
  string username = 1;
}

message GetAccountResponse {
  Account account = 1;
}

message DeleteAccountRequest {
  string username = 1;
}

message DeleteAccountResponse {
  bool success = 1;
}

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
}